@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-08-10T08:18:49Z",
-  "count_outdated" : 443,
-  "uniques_outdated" : 255,
-  "count" : 488,
+  "timestamp" : "2022-08-10T16:22:07Z",
+  "count_outdated" : 445,
+  "uniques_outdated" : 256,
+  "count" : 489,
   "uniques" : 282,
   "clones" : [
-    {
-      "timestamp": "2022-07-27T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-28T00:00:00Z",
       "count": 2,
