@@ -1,12 +1,7 @@
 {
-  "count": 45,
+  "count": 44,
   "uniques": 13,
   "clones": [
-    {
-      "timestamp": "2022-07-27T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-07-28T00:00:00Z",
       "count": 2,
